fix jumping left and right paddings in columns in prices section

--- a/source/sass/blocks/prices.scss
+++ b/source/sass/blocks/prices.scss
@@ -1,7 +1,5 @@
 .prices {
   padding-top: 99px;
-  // padding-left: 200px;
-  // padding-right: 200px;
   padding-left: calc((100% - 75%) / 2);
   padding-right: calc((100% - 75%) / 2);
   padding-bottom: 120px;
@@ -28,19 +26,6 @@
   box-sizing: border-box;
 }
 
-// .prices__item::before {
-//   content: "";
-//   position: absolute;
-//   top: 0;
-//   left: 50%;
-//   transform: translateX(-50%);
-//   width: 100%;
-//   height: 37px;
-//   border: 1px solid rgba(0, 0, 0, 0.5);
-//   border-top: 5px solid #485563;
-//   border-bottom: none;
-// }
-
 .prices__item:hover {
   padding-top: 37px;
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -56,15 +41,10 @@
 }
 
 .prices__item:hover+.prices__item .prices__description {
-  padding-left: 66px;
+  padding-left: 65px;
 }
 
-// .prices__item:hover .prices__button {
-//   bottom: 39px;
-// }
-
 .prices__not-selected {
-  // padding-top: 65px;
   padding-bottom: 75px;
   border: 1px solid rgba(0, 0, 0, 0.5);
   max-width: 390px;
@@ -108,8 +88,8 @@
 }
 
 .prices__description {
-  padding-left: calc(100% - 83.33%);
-  padding-right: calc(100% - 83.33%);
+  padding-left: 16.455%;
+  padding-right: 16.71%;
   @include font("OpenSans-Regular", 14px, 40px, rgb(41, 50, 60));
   display: flex;
   align-items: center;
@@ -117,6 +97,11 @@
   min-height: 262px;
   max-width: 390px;
   width: 100%;
+}
+
+.prices__item:last-child .prices__description {
+  padding-left: 16.495%;
+  padding-right: 16.495%;
 }
 
 .prices__slider {
